2012-05-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret/: Support Supermicro OEM SEL event
	interpretations.

	* libfreeipmi/interpret/ipmi-interpret-config-sel.c,
	etc/freeipmi_interpret_sel.conf: Fix comment typos.

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr.h,
	libfreeipmi/sdr/ipmi-sdr-parse-util.c (ipmi_sdr_parse_sensor_name):
	New function.
	
2012-05-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h, libfreeipmi/sel/:
	Support interpretation of event in sel library.  Support %I string
	output.
	
	* common/toolcommon/tool-event-common.h,
	common/toolcommon/tool-event-common.c (event_load_event_state_config_file):
	New function.
	
	* Globally update tools as necessary for changes.

2012-05-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sdr-cache-common.h,
	common/toolcommon/tool-sdr-cache-common.c (sdr_cache_setup_debug):
	Remove function.  Fold into sdr_cache_create_and_load.

	* Globally update tools as necessary for changes.
	
2012-05-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.c, libfreeipmi/sel/:
	Support IPMI_SEL_STRING_FLAGS_ENTITY_SENSOR_NAMES flag.
	
	* Adjust tools and common/toolcommon for new option.
	
2012-05-21  Albert Chu <chu11@llnl.gov>

	Merge branch entitysensornamesredo.

	* libfreeipmi/include/freeipmi/sdr/, libfreeipmi/sdr/: Support new
	stats functions to compile useful info from the SDR.

	* common/toolcommon/tool-sensor-common.h,
	common/toolcommon/tool-sensor-common.c: Update for new SDR stats
	functions.

	* Globally update tools as necessary for changes. 

	* libfreeipmi/include/freeipmi/util/ipmi-sensor-units-util.h,
	libfreeipmi/include/freeipmi/util/ipmi-sensor-units-util.c: Remove
	files.  Collapse code into ipmi-sensor-util.h and
	ipmi-sensor-util.c.

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr.h (ipmi_sdr_parse_entity_sensor_name):
	New function.

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c: New
	file.
